# throwing_motion_gen_ros

./: CMakeLists.txt  README.md  package.xml
config/analytic_DS/: ds_param.yml
config/learned_DS/pre_toss/: toss_mu.txt  toss_prior.txt  toss_sigma.txt
include/: Utils.hpp  throwingDS.h  throwingMotionGeneration.h
launch/: load_throwingDS.launch
src/: throwingDS.cpp  throwingDS_node.cpp  throwingMotionGeneration.cpp  throwingMotionGeneration_node.cpp
