<?xml version="1.0"?>
<package>
  <name>throwing_ds_ros</name>
  <version>0.0.0</version>
  <description>The throwing_ds_ros package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="michael.bombile@epfl.ch">michael</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <!-- <build_depend>dynamic_reconfigure</build_depend> -->
  <build_depend>mathlib</build_depend>
  <build_depend>sgaussians</build_depend>
  <!-- <build_depend>lpvDS</build_depend> -->
  

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <!-- <run_depend>dynamic_reconfigure</run_depend> -->
  <run_depend>mathlib</run_depend>
  <run_depend>sgaussians</run_depend>
  <!-- <run_depend>lpvDS</run_depend> -->
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
